# addon-software-foundations

./: .gitignore  Makefile  dune  dune-project  jscoq-software-foundations.json  package.json  software-foundations-pkg.json
dune-files/: dune  dune-project
dune-files/lf/: dune
dune-files/plf/: dune
dune-files/slf/: dune
dune-files/vfa/: dune
etc/docker/: .gitignore  Dockerfile  Makefile
